Fix horizontal scrolling issue
From Moodle 4.0, the horizontal width available for the question content in
the standard Moodle design is lower than what many Biber questions require.

This adapts the Moodle layout's question max-width to the value required by
Biber tasks.

This will affect the layout of all quiz questions.

This fixes issue biberdata4moodle#12 and biber2moodle#3.

--- a/question/type/interactivesvg/styles.css
+++ b/question/type/interactivesvg/styles.css
@@ -40,3 +40,16 @@ body#page-question-type-interactivesvg div[id^=fitem_id_][id*=feedback_] {
     border: 1px solid #bbb;
     border-top: 0;
 }
+
+/* Modified width of Moodle quiz layout */
+@media (min-width: 768px) {
+    #page-header {
+        max-width: 953.5px !important;
+    }
+    .secondary-navigation {
+        max-width: 953.5px !important;
+    }
+    .pagelayout-standard #page.drawers .main-inner, body.limitedwidth #page.drawers .main-inner {
+        max-width: 953.5px !important;
+    }
+}
